// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Behavior UserPresence 1`] = `
<div>
  <div>
    <div
      class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Mario Rossi"
            src="https://randomuser.me/api/portraits/men/43.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <span
              class="visually-hidden"
            >
              Presenza:attivo
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Luisa Neri"
            src="https://randomuser.me/api/portraits/women/41.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20 12.5H4v-1h16v1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Presenza: non disponibile
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Gioacchino Romani"
            src="https://randomuser.me/api/portraits/men/33.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <span
              class="visually-hidden"
            >
              Presenza: invisible
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-md"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20 12.5H4v-1h16v1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Presenza: non disponibile
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-lg"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20 12.5H4v-1h16v1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Presenza: non disponibile
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20 12.5H4v-1h16v1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Presenza: non disponibile
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xxl"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-presence presence"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M20 12.5H4v-1h16v1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Presenza: non disponibile
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Behavior UserStatus 1`] = `
<div>
  <div>
    <div
      class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Mario Rossi"
            src="https://randomuser.me/api/portraits/men/43.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: approvato
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Luisa Neri"
            src="https://randomuser.me/api/portraits/women/41.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: respinto
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Gioacchino Romani"
            src="https://randomuser.me/api/portraits/men/33.jpg"
          />
          <div
            class="avatar-status status"
          >
            <span
              class="visually-hidden"
            >
              Testa notifica
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-md"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: approvato
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-lg"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: respinto
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xl"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M9.6 16.9 4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7-9.2 9.1z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: approvato
            </span>
          </div>
        </div>
      </div>
      <div
        class="avatar-wrapper"
      >
        <div
          class="avatar size-xxl"
        >
          <img
            alt="Ludovica Galli"
            src="https://randomuser.me/api/portraits/women/32.jpg"
          />
          <div
            class="avatar-status status"
          >
            <svg
              class="icon icon-white"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Stato: approvato
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
